# vegetable_recognition

./: .gitattributes  LICENSE  README.md  app-debug.apk  model.safetensors  start_database.bat
neural_network/: requirements.txt  模型架构.txt  部署及训练过程.md
neural_network/src/: dataset.py  fine_tuned_resnet50.py  first_train.py  model.py  optimized_train.py  predict_img.py  server.py  train.py  utils.py
neural_network/src/test/: img_to_tensor.py  safetensor_parse.py
system_test/: predict.py  user_create.py  user_verify.py
vegetable_recognition_backend/: Cargo.toml  README.md
vegetable_recognition_backend/src/: main.rs
vegetable_recognition_backend/src/fine_tuned_resnet50/: dataset.rs  mod.rs  model.rs  predict.rs
vegetable_recognition_backend/src/handlers/: mod.rs  predict.rs  user.rs
vegetable_recognition_backend/src/scylla_db/: mod.rs
vegetable_recognition_frontend/: README.md  pubspec.yaml
vegetable_recognition_frontend/android/: local.properties
vegetable_recognition_frontend/android/app/: build.gradle.kts
vegetable_recognition_frontend/ios/Runner/: Info.plist
vegetable_recognition_frontend/ios/Runner.xcodeproj/: project.pbxproj
vegetable_recognition_frontend/lib/: main.dart  model.dart
vegetable_recognition_frontend/lib/pages/: home_page.dart  login_page.dart
vegetable_recognition_frontend/linux/: CMakeLists.txt
vegetable_recognition_frontend/test/: widget_test.dart
vegetable_recognition_frontend/web/: index.html  manifest.json
vegetable_recognition_frontend/windows/: CMakeLists.txt
(+14 files in other folders)
