[package]
name = "vegetable_recognition_backend"
author = "whiter007"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
candle-core =        { git = "https://github.com/huggingface/candle.git", version = "0.8.3", features = ["cuda"] }
candle-datasets =    { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
candle-nn =          { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
candle-transformers ={ git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
# candle-examples =    { git = "https://github.com/huggingface/candle.git", version = "0.8.3" }
clap = { version = "4.5.28", features = ["derive"] }
rand = "0.9.0"
salvo = {features = ["basic-auth"], version = "0.77.1"}
tokio = { version = "1.44.1", features = ["full"] }
scylla = "1.0.0"
futures = "0.3.31"
# uuid = "1.16.0"
# once_cell = "1.21.3"
image = "0.25.6"
